<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/event_activity_header"
              android:text="@string/event_header"
              android:textSize="24sp"
              android:layout_centerHorizontal="true"
              android:layout_margin="10dp"
              android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/event_activity_description"
              android:text="@string/lorem_text"
              android:layout_below="@id/event_activity_header"
              android:textAlignment="center"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>


    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_edit_gear"
            android:id="@+id/fab_edit_details"/>

</RelativeLayout>