<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/addText"
              android:layout_centerHorizontal="true"
              android:layout_margin="24sp"
              android:textStyle="bold"
              android:textSize="24sp"
              android:text="Add an Event"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/event_header_edittext"
              android:layout_centerHorizontal="true"
              android:hint="Event Title"
              android:layout_below="@id/addText"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/event_description_edittext"
              android:layout_below="@id/event_header_edittext"
              android:layout_centerHorizontal="true"
              android:hint="Event Description"
              android:inputType="textMultiLine"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/save_event_button"
              android:layout_below="@id/event_description_edittext"
              android:layout_alignParentEnd="true"
              android:layout_alignParentRight="true"
              android:layout_marginRight="24dp"
              android:layout_marginTop="20dp"
              android:layout_centerHorizontal="true"
              android:text="Save"/>

    <Spinner android:id="@+id/timeRequiredSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/event_description_edittext"
             android:layout_marginTop="20dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"/>

</RelativeLayout>